# package_json_schema

./: .envrc  .gitignore  .release-plz.toml  Cargo.toml  changelog.md  deno.jsonc  devenv.nix  devenv.yaml  dprint.json  readme.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/actions/devenv/: action.yml
.github/actions/rust/: action.yml
.github/workflows/: ci.yml
setup/editors/helix/: languages.toml
setup/editors/vscode/: extensions.json  settings.json
setup/scripts/: nextest_setup.sh
src/: error.rs  lib.rs  package_json.rs  utils.rs
tests/: package_json.rs
tests/fixtures/2/: package.json
tests/fixtures/3/: package.json
tests/fixtures/4/: package.json
tests/fixtures/5/: package.json
